--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,6 @@ html {
 
 .google i {
   padding: 10px;
-  /* color: red; */
   box-shadow: 0px 0px 3px 1.5px lightgray;
   border-radius: 5px;
   margin-left: 1.5rem;
@@ -105,6 +104,7 @@ html {
   margin-left: 5px;
   margin-bottom: 8px;
   outline: none;
+  letter-spacing: 1px;
 }
 .bottom p {
   font-size: 10px;
