--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ html {
 .welcome p {
   font-size: x-small;
   font-weight: 600;
+  width: 30%;
   margin: 3rem 9rem 3rem 5rem;
   text-align: center;
   padding: 5px 10px;
@@ -114,13 +115,14 @@ html {
   margin-left: 66%;
 }
 .bottom button {
+  text-align: center;
   background-color: #202c5e;
   width: 100%;
   padding: 8px 5px;
   border-radius: 5px;
   border-style: none;
   color: white;
-  margin-top: 1.5rem;
+  margin: 1.5rem auto;
   box-shadow: 0px 0px 3px 1px grey;
   outline: none;
   letter-spacing: 1px;
@@ -131,7 +133,6 @@ html {
 .bottom h5 {
   font-size: 10px;
   text-align: center;
-  margin-top: 1rem;
 }
 .bottom span {
   color: #ea4335;
