--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ html {
   box-shadow: 0px 0px 3px 1.5px lightgrey;
   border-radius: 5px;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 .facebook i:hover {
   box-shadow: none;
@@ -55,6 +56,7 @@ html {
   border-radius: 5px;
   margin-left: 1.5rem;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 .google i:hover {
   box-shadow: none;
@@ -126,6 +128,7 @@ html {
   box-shadow: 0px 0px 3px 1px grey;
   outline: none;
   letter-spacing: 1px;
+  cursor: pointer;
 }
 .bottom button:hover {
   box-shadow: none;
@@ -137,4 +140,5 @@ html {
 .bottom span {
   color: #ea4335;
   font-weight: 800;
+  cursor: pointer;
 }
